WIP Marked tests failing due to behaviour changes - need fixing